[package]
name = "lsp-client"
version = "0.1.0"
edition = "2021"
authors = ["Luc Georges <luc@huggingface.co>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp-types = "0.94"
oneshot = { version = "0.1", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

